2004-06-26  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp.el (tramp-handle-file-remote-p): New implementation to
	agree with new return value of `file-remote-p'.

2004-06-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-find-backup-file-name): `copy-tree' is
	available since Emacs 21.4 only (XEmacs has it).  Implementation
	rewritten in order to avoid this function.
	(tramp-handle-write-region): Set current buffer.  If connection
	wasn't open, `file-modes' has changed it accidently.  Reported by
	David Kastrup <dak@gnu.org>.

2004-06-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-sh-file-name-handler): Leaving this function,
	`tramp-locked' must be reset to the same value as during entering.

2004-06-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-enter-password, tramp-read-passwd): New
	arguments USER and HOST.
	(tramp-action-password, tramp-multi-action-password): Apply it.

	* tramp-smb.el (tramp-smb-open-connection): Apply USER and HOST to
	`tramp-enter-passwd'.

2004-06-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (all): Code cleanup.  Change all `tramp-handle-xxx'
	calls to respective `xxx` calls.

	* tramp-vc.el (all): Code cleanup.  Change all `tramp-handle-xxx'
	calls to respective `xxx` calls.

2004-06-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-alive-regexp): Precise doc string.
	(tramp-multi-action-process-alive): New defun.
	(tramp-multi-actions): Use it.

2004-05-30  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp.el (tramp-locked, tramp-locker): New variables for
	implementing a global lock.
	(tramp-sh-file-name-handler): Use them to implement the global
	lock.
	(tramp-let-maybe): ReportReverse args of `get'.
	(tramp-let-maybe): Move to an earlier spot in the file.  Patch by
	Andreas Schwab.
	(tramp-handle-file-local-copy-hook): New hook.
	(tramp-handle-file-local-copy): Run it.
	(tramp-handle-write-region-hook): New hook.